fix(input-group): double borders and wrong alignments. fix(pagination): missing border. docs: adds loading screen.

--- a/packages/flux/src/scss/mixin/_focus-ring.scss
+++ b/packages/flux/src/scss/mixin/_focus-ring.scss
@@ -36,6 +36,10 @@
     }
 }
 
+@mixin focus-ring-remove() {
+    outline: 0 !important;
+}
+
 @mixin focus-ring-transition($offset: 0, $within: false) {
     @include focus-ring($offset, $within);
 
